# ports

./: REPO  depfind  depthing  dotfile_update  find  install_order  pkgfile  template  tree  xfce_port_list
atk-32/: .footprint  Pkgfile
bw/: .footprint  .md5sum  Pkgfile
cantata/: .footprint  Pkgfile
compton-conf/: .md5sum
debootstrap/: .footprint  .md5sum  Pkgfile
exo/: .footprint  Pkgfile
falkon/: .footprint  Pkgfile
featherpad/: .footprint  Pkgfile
firefox-bin/: Pkgfile
freefont/: Pkgfile
garcon/: .footprint  Pkgfile
gdk-pixbuf-32/: .footprint  Pkgfile  post-install
girara/: Pkgfile
gmrun/: Pkgfile
gobject-introspection-compat32/: .md5sum  Pkgfile  crossfile.ini  gobject-introspection-1.58.3-64bit-multilib.patch  meson_python_header.diff  use_python_header.diff
gtk2fontsel/: .footprint  .md5sum  Pkgfile
i3/: Pkgfile
i3lock/: .footprint  Pkgfile
keybinder/: Pkgfile
launch/: .footprint  .md5sum  Pkgfile
libfm/: .footprint  Pkgfile
libfm-extra/: .footprint  Pkgfile
libfm-qt/: .footprint  .md5sum  Pkgfile
liblxqt/: .footprint  .md5sum  Pkgfile
libqtxdg/: .footprint  .md5sum  Pkgfile
libstatgrab/: .footprint  .md5sum  Pkgfile  REPO
libsysstat/: .footprint  .md5sum  Pkgfile
libxfce4ui/: .footprint  Pkgfile
libxfce4util/: Pkgfile
lxappearance/: Pkgfile
lxappearance-obconf/: .footprint  Pkgfile
lxde-common/: Pkgfile
lxhotkey/: Pkgfile
lximage-qt/: .footprint  .md5sum  Pkgfile
lxmenu-data/: Pkgfile
lxpanel/: .footprint
lxqt-about/: .footprint  .md5sum  Pkgfile
lxqt-admin/: .footprint  .md5sum  Pkgfile
lxqt-archiver/: .footprint  .md5sum  Pkgfile
lxqt-build-tools/: .footprint  .md5sum  Pkgfile
lxqt-config/: .footprint  .md5sum  Pkgfile
lxqt-globalkeys/: .footprint  .md5sum  Pkgfile
lxqt-notificationd/: .footprint  .md5sum  Pkgfile
lxqt-openssh-askpass/: .footprint  .md5sum  Pkgfile
lxqt-panel/: .footprint  .md5sum  Pkgfile
lxqt-policykit/: .footprint  .md5sum  Pkgfile
lxqt-powermanagement/: .footprint  .md5sum  Pkgfile
lxqt-qtplugin/: .md5sum  Pkgfile
lxqt-runner/: .footprint  .md5sum  Pkgfile
lxqt-session/: .footprint  .md5sum  Pkgfile
lxqt-sudo/: .footprint  .md5sum  Pkgfile
lxqt-themes/: .footprint  .md5sum  Pkgfile
lxrandr/: Pkgfile
lxsession/: Pkgfile
lxtask/: .md5sum  Pkgfile
lxterminal/: .md5sum  Pkgfile
menu-cache/: .footprint  Pkgfile
menumaker/: .Pkgfile.un~  .md5sum  Pkgfile  lxterminal_add.patch
mesa3d/: .footprint  Pkgfile
muparser/: .footprint  Pkgfile
ncmpcpp/: .footprint  .md5sum  Pkgfile
notification-daemon/: Pkgfile
obconf-qt/: .footprint  .md5sum  Pkgfile
obmenu/: .Pkgfile.un~
old/compton-conf/: .footprint  Pkgfile
old/firefox-bin/: .md5sum  firefox.desktop
old/girara/: Pkgfile
old/gmrun/: .footprint  .md5sum
old/i3/: .md5sum
pcmanfm/: Pkgfile
pcmanfm-qt/: .footprint  .md5sum  Pkgfile
polkit-gnome/: .footprint  .md5sum  Pkgfile
qps/: .footprint  .md5sum  Pkgfile
qterminal/: .footprint  .md5sum  Pkgfile
qtermwidget/: .footprint  .md5sum  Pkgfile
qtstyleplugins/: .md5sum  Pkgfile
quimup/: .footprint  .md5sum  Pkgfile  quimup.desktop
screengrab/: .footprint  .md5sum  Pkgfile
sct/: .footprint  .md5sum  Pkgfile
slimlock/: .footprint  Pkgfile  post-install
smplayer-skins/: .footprint  Pkgfile
smplayer-themes/: .footprint  .httpup-urlinfo  Pkgfile
sndio/: .footprint  .md5sum  Pkgfile  README  pre-install  sndio.rc
spacefm/: .md5sum  Makefile.in.patch  Pkgfile
steghide/: .md5sum  Pkgfile
teams/: .footprint  .md5sum  Pkgfile
thunar/: Pkgfile
thunar-volman/: Pkgfile
tint2/: .Pkgfile.un~  Pkgfile
tumbler/: Pkgfile
upower/: .Pkgfile.un~  Pkgfile
upower/upower-0.99.11/dbus/: Makefile.am  Makefile.in  up-daemon-generated.c  up-daemon-generated.h  up-device-generated.c  up-device-generated.h  up-kbd-backlight-generated.c  up-kbd-backlight-generated.h  up-wakeups-generated.c  up-wakeups-generated.h
upower/upower-0.99.11/doc/: Makefile.am  Makefile.in
upower/upower-0.99.11/doc/man/: Makefile.in  UPower.xml
upower/upower-0.99.11/libupower-glib/: Makefile.am  Makefile.in  up-autocleanups.h  up-client.c  up-client.h  up-device.c  up-device.h  up-history-item.c  up-history-item.h  up-stats-item.c  up-stats-item.h  up-types.c  up-types.h  up-version.h  up-version.h.in  up-wakeup-item.c  up-wakeup-item.h  up-wakeups.c  upower.h
upower/upower-0.99.11/src/: Makefile.am  Makefile.in  up-backend-bsd-private.h  up-backend.h  up-config.c  up-config.h  up-constants.h  up-daemon.c  up-daemon.h  up-device-list.c  up-device-list.h  up-device.c  up-device.h  up-history.c  up-kbd-backlight.c  up-kbd-backlight.h  up-main.c  up-self-test.c  up-wakeups.c  up-wakeups.h  upower.service.in
upower/upower-0.99.11/src/bsd/: Makefile.am  Makefile.in  up-backend-common.c
upower/upower-0.99.11/src/dummy/: Makefile.am  Makefile.in  up-backend.c
upower/upower-0.99.11/src/freebsd/: Makefile.am  Makefile.in  up-backend.c  up-device-supply.c  up-native.c
upower/upower-0.99.11/src/linux/: Makefile.am  Makefile.in  hidpp-device.c  integration-test  sysfs-utils.c  sysfs-utils.h  up-backend-linux-private.h  up-backend.c  up-device-bluez.c  up-device-bluez.h  up-device-csr.c  up-device-hid.c  up-device-idevice.c  up-device-supply.c  up-device-unifying.c  up-device-wup.c  up-input.c  up-native.c
upower/upower-0.99.11/src/openbsd/: Makefile.am  Makefile.in  up-backend.c
vimb/: .footprint  .md5sum  Pkgfile
wpa_gui/: .footprint  Pkgfile
wyebadblock/: .footprint  .md5sum  Pkgfile  README
xdg-user-dirs/: Pkgfile
xfce4-alsa-plugin/: Pkgfile
xfce4-appfinder/: Pkgfile
xfce4-battery-plugin/: .footprint
xfce4-notifyd/: .footprint  Pkgfile
xfce4-panel/: Pkgfile
xfce4-power-manager/: .footprint  Pkgfile
xfce4-session/: Pkgfile
xfce4-settings/: Pkgfile
xfce4-terminal/: .Pkgfile.un~  Pkgfile
xfce4-whiskermenu-plugin/: .md5sum  Pkgfile
xfconf/: .footprint  Pkgfile
xfdesktop/: Pkgfile
xfwm4/: .footprint  Pkgfile
zathura/: .footprint  Pkgfile
zathura-pdf-poppler/: Pkgfile
zathura-ps/: .footprint  Pkgfile
(+52 files in other folders)
